src/App.css
@import 'bootstrap/dist/css/bootstrap.min.css';
.App {
	text-align: center;
}

.App-header {
	background-color: white;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	font-size: calc(10px + 2vmin);
	color: black;
}

.App-link {
	color: #61dafb;
}
.badge-btn {
	width: 107px;
	height: 34px;
	left: 63px;
	border-radius: 8px;
	border: 0px;
	background-color: #86bef8;
	font-size: 12px;
	font-weight: 600;
	color: white;
	padding: 5px 1px;
	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}
.badge-btn:hover,
.badge-btn:focus,
.badge-btn:active,
.badge-btn.active {
	background-color: #fc9891;
	border-color: #e1efff;
	border: 0px;
	color: white;
}
.badge-card {
	width: 374px;
	height: 118px;
	left: 20px;

	/* margin: 2em; */
  margin-top: 40px;
  

	background-color: #e1eeff;
}
.badge-card-title {
	font-family: Fredoka One;
	font-style: normal;
	font-weight: normal;
	font-size: 24px;
	padding: 5px;
	text-align: center;
	color: #000000;
}
.header {
	width: 374px;
	height: 118px;
	left: 20px;
	margin: 1em;
	background-color: #e1eeff;
}
.header-title {
	font-family: 'Fredoka One';
	font-size: 14px;
}
.header-p {
	font-family: 'Open Sans';
	font-size: 14px;
}
.cdc-card {
	width: 374px;

	height: 118px;
	left: 150px;
  top: 100px;
	/* margin: 1em; */
  margin-top: 1.7em;
  margin-bottom: 1em;
  margin-right: 1em;
  margin-left: 1.27em;

	color: black;
	background-color: #fffaca;
	border-radius: 8px;
	border: 0px;
	padding: 5px 10px;
	text-align: center;
	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}
.cdc-click {
	font-size: 18px;
	color: black;
	font-family: 'fredoka one';
}
.cdc-p {
	font-family: 'open sans';
	color: black;
	font-size: 18px;
}
hr {
	display: block;
	border: 0;
	height: 15px;
	background-image: url('./images/hr.png');
	background-repeat: no-repeat;
}
.carousel {
	width: 374px;
	height: 527px;
	left: 20px;
	top: 1em;
	background-color: #e5e5e5;
}


.modal-carousel {
	width: 394px;
	height: auto;
	left: 20px;
	top: 2em;
	background-color: #e5e5e5;
}

.talk-card {
  width: 374px;
	height: 75px;
	left: 20px;
	/* margin: 1em; */
  border-radius: 8px;
	border: 1px;
  text-align: center;

}

.site-wrapper {

  /* display: grid;
  grid-template-columns: 1em, 600px, 1em;
  /* grid-template-rows: 150px, 180px, 700px, 250px, 250px; */
  /* grid-template-rows: 1fr, 1fr, 1fr, 1fr, 1fr;   */ 

}

.jumbo-wrapper {

  grid-row: 1 / span 1;
  

}

.talk-wrapper { 
  grid-row: 2 /span 1;
}

.cara-wrapper {
  grid-row: 3 / span 1;

}

.badge-wrapper {
  grid-row: 4 / span 1; 


}

.cdc-wrapper {
  grid-row: 6 / span 1; 


}


@media screen and (max-width: 600px) {
	.brand {
		font-size: 30px !important;
	}
}

